--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
     "react-router": "^7.6.2",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
